--- a/CSS/Widescreen.css
+++ b/CSS/Widescreen.css
@@ -87,17 +87,23 @@
 .result .word h2{
     font-size:30px;
     font-weight:800;
-
+    display: inline-block;
     color: red;
     font-family: 'Ubuntu', sans-serif;
     padding: 5px 0px;
+}
+.result .word .fa-sharp{
+    float: right;
+    font-size: 24px;
+    padding: 5px 0px;
+    cursor: pointer;
+    color: black;
 }
 .result .details p{
     font-size:16px;
     font-weight: 600;
     padding: 4px 0px;
     font-family: 'Ubuntu', sans-serif;
-
     display: inline-block;
 }
 .result .wordmeaning{
