--- a/CSS/Widescreen.css
+++ b/CSS/Widescreen.css
@@ -53,12 +53,11 @@
     width: 500px;
     height: 40px;
     font-size: 18px;
-    padding-left: 25px;
+    padding-left: 15px;
     border-radius: 14px;
     border: 1px solid grey;
 }
 .mainContent input[type="text"]::placeholder{
-    padding-left: 15px;
     color: rgb(163, 160, 160);
 }
 .button{
@@ -146,6 +145,7 @@
         width: 300px;
         font-size: 16px;
         padding-left: 10px;
+        border-radius: 5px;
     }
     .button{
         padding: 0px;
@@ -200,7 +200,7 @@
     .mainContent input[type="text"]{
         width: 300px;
         font-size: 16px;
-        padding-left: 20px;
+        padding-left: 12px;
     }
     .result{
         width: 350px;
@@ -234,7 +234,7 @@
         width: 200px;
         height: 30px;
         font-size: 14px;
-        padding-left: 5px;
+        padding-left: 8px;
     }
     .result{
         width: 280px;
